2006-12-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in, unix/Makefile.in (demo): add 'demo' target

2006-12-13  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/ttk.tcl: Try to straighten out theme loading 
	and selection logic.
	* generic/ttk/ttkElements.c, library/ttk/defaults.tcl,
	generic/ttk/ttkClamTheme.c, library/ttk/clamTheme.tcl: 
	Provide package in C part instead of Tcl part.

2006-12-12  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/ttk.tcl, generic/ttkTheme.c: 
	Remove nonfunctional code.

2006-12-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinButton.c (InitBoxes): Call Tcl_Panic()
	if loading of bitmap resources fails. This change
	generates an error if Tk is unable to find button
	widget resources instead of silently failing and
	then drawing widgets incorrectly.
	win/rc/tk_base.rc: If the user defines BASE_NO_TK_ICON
	then compile the base resources file without a
	"tk" icon. This change makes it easier to replace the
	default tk icon with a custom icon.
	[Patch 1614362]

2006-12-11  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* unix/tkUnixWm.c (TkWmMapWindow, WmClientCmd): Added support for
	_NET_WM_PID property from the EWMH spec. This is only installed when
	the client machine is set.
	(WmProtocolCmd, UpdateWmProtocols, TkWmProtocolEventProc): Added
	support for the _NET_WM_PING protocol from the EWMH spec. Note that
	the support for this is not exposed to the script level as that would
	prevent correct handling.

2006-12-10  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTheme.h, generic/ttk/ttkThemeInt.h,
	* generic/ttk/ttk.decls, generic/ttk/ttkTheme.c,
	* generic/ttk/ttkLayout.c, generic/ttk/ttkDecls.h:
	Rename typedef Ttk_Element => Ttk_ElementImpl.

2006-12-09  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkButton.c, generic/ttk/ttkImage.c,
	* generic/ttk/ttkLabel.c, generic/ttk/ttkWidget.h,