@@ -207,10 +207,8 @@ extern WidgetSpec ttkSizegripWidgetSpec;
 extern int TtkProgressbar_Init(Tcl_Interp *);
 extern int TtkNotebook_Init(Tcl_Interp *);
 extern int TtkEntryWidget_Init(Tcl_Interp *);
-#ifdef TTK_TREEVIEW_WIDGET
 extern int TtkTreeview_Init(Tcl_Interp *);
-#endif
-extern int TtkPaned_Init(Tcl_Interp *);
+extern int TtkPanedwindow_Init(Tcl_Interp *);
 #ifdef TTK_SQUARE_WIDGET
 extern int TtkSquareWidget_Init(Tcl_Interp *);
 #endif
@@ -231,10 +229,8 @@ static void RegisterWidgets(Tcl_Interp *interp)
     TtkNotebook_Init(interp);
     TtkEntryWidget_Init(interp);
     TtkProgressbar_Init(interp);
-    TtkPaned_Init(interp);
-#ifdef TTK_TREEVIEW_WIDGET
+    TtkPanedwindow_Init(interp);
     TtkTreeview_Init(interp);
-#endif
 #ifdef TTK_SQUARE_WIDGET
     TtkSquareWidget_Init(interp);
 #endif
